tests/invalid/type/redeclaration_same_scope.pts
import Io;

function main(): void {
    string t = Io.tempPath();
    TextFile t = Io.openText(t, "w");
}
